[roomplanner] Fix clipped tooltips, add border to PCs

--- a/modules-available/roomplanner/style.css
+++ b/modules-available/roomplanner/style.css
@@ -65,9 +65,6 @@ body {
 	right:-20px; }
 
 
-[itemlook="computer"] { background: url('images/computer/computer.png') no-repeat;}
-
-
 [itemlook="door-nw"] { background: url('images/wall/door-nw.png') no-repeat;}
 [itemlook="door-ne"] { background: url('images/wall/door-ne.png') no-repeat;}
 [itemlook="door-sw"] { background: url('images/wall/door-sw.png') no-repeat;}
@@ -81,12 +78,12 @@ body {
 	background: url('images/electricalDevices_wIP/copier.png') no-repeat;
 	}
 
-/*
-[itemlook="pc"] {
-	background: url('images/electricalDevices_wIP/pc.png') no-repeat;
-	z-index:100;
+
+[itemlook|="pc"] {
+	border: 1px solid #999;
+	border-radius: 4px;
 	}
-*/
+
 [itemlook="pc-east"] {
 	background: url('images/electricalDevices_wIP/pc_east.png') no-repeat;
 	}
